force-app/main/default/objects/OpportunityLineItem/fields/Actual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Contract_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annual Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>