force-app/main/default/objects/OpportunityLineItem/fields/Annuity_Test__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Test__c</fullName>
    <label>Extended Recurring Revenue Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>