force-app/main/default/objects/OpportunityLineItem/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Used to schedule product.</description>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
                <default>true</default>
                <label>1 month</label>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>4 Months</fullName>
            </value>
            <value>
                <fullName>5 Months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>7 Months</fullName>
            </value>
            <value>
                <fullName>8 Months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
            <value>
                <fullName>10 Months</fullName>
            </value>
            <value>
                <fullName>11 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>