force-app/main/default/objects/OpportunityLineItem/fields/Dynamics_Contract_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Dynamics_Contract_Executed_Date__c</fullName>
    <description>CATM</description>
    <label>Dynamics Contract Executed Date</label>
    <type>Date</type>
</CustomField>