force-app/main/default/objects/OpportunityLineItem/fields/Is_Subscriptioned__c.field-meta.xml
<CustomField>
    <fullName>Is_Subscriptioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subscription</label>
    <type>Checkbox</type>
</CustomField>