force-app/main/default/objects/OpportunityLineItem/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected HWM</fullName>
            </value>
            <value>
                <fullName>Non-Connected HWM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>