force-app/main/default/objects/OpportunityLineItem/fields/Market_Product_PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>Market_Product_PriceBookEntryId__c</fullName>
    <label>Market Product PriceBookEntryId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>