force-app/main/default/objects/OpportunityLineItem/fields/Master_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Line_Id__c</fullName>
    <label>Master Line Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>