force-app/main/default/objects/OpportunityLineItem/fields/Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>