force-app/main/default/objects/OpportunityLineItem/fields/Number_of_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Licenses__c</fullName>
    <label>Number of Licenses</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>