force-app/main/default/objects/OpportunityLineItem/fields/Number_of_Terms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Terms__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Terms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>