force-app/main/default/objects/OpportunityLineItem/fields/One_Time_Fee__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>One Time Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>