force-app/main/default/objects/OpportunityLineItem/fields/One_Time_Revenue__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Revenue</label>
    <type>Checkbox</type>
</CustomField>