force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Line_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_Type__c</fullName>
    <label>Opportunity Line Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>