force-app/main/default/objects/OpportunityLineItem/fields/Original_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Created_Date__c</fullName>
    <description>Original Created Date</description>
    <label>Original Created Date</label>
    <type>DateTime</type>
</CustomField>