force-app/main/default/objects/OpportunityLineItem/fields/Product_Annual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Annual_Contract_Value__c</fullName>
    <description>CATM</description>
    <label>Product Annual Contract Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>