force-app/main/default/objects/OpportunityLineItem/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>