force-app/main/default/objects/OpportunityLineItem/fields/ProductClonedFromId__c.field-meta.xml
<CustomField>
    <fullName>ProductClonedFromId__c</fullName>
    <label>ProductClonedFromId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>