force-app/main/default/objects/OpportunityLineItem/fields/PSM__c.field-meta.xml
<CustomField>
    <fullName>PSM__c</fullName>
    <label>Consulting Systems Specialists</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andy Fisher</fullName>
            </value>
            <value>
                <fullName>Andy Smillie</fullName>
            </value>
            <value>
                <fullName>Bob Smith</fullName>
            </value>
            <value>
                <fullName>Brian McGlinchey</fullName>
            </value>
            <value>
                <fullName>Bruce Jones</fullName>
            </value>
            <value>
                <fullName>Carol Hamilton</fullName>
            </value>
            <value>
                <fullName>Chris Collier</fullName>
            </value>
            <value>
                <fullName>Dan Moran</fullName>
            </value>
            <value>
                <fullName>Dan White</fullName>
            </value>
            <value>
                <fullName>David Feaster</fullName>
            </value>
            <value>
                <fullName>David McDonald</fullName>
            </value>
            <value>
                <fullName>Dror Ben David</fullName>
            </value>
            <value>
                <fullName>George Marin</fullName>
            </value>
            <value>
                <fullName>Glen Green</fullName>
            </value>
            <value>
                <fullName>Jeff Peterson</fullName>
            </value>
            <value>
                <fullName>Joe Frazier</fullName>
            </value>
            <value>
                <fullName>Keitt Moore</fullName>
            </value>
            <value>
                <fullName>Kent Berman</fullName>
            </value>
            <value>
                <fullName>Kevin Ellis</fullName>
            </value>
            <value>
                <fullName>Larry Hock</fullName>
            </value>
            <value>
                <fullName>Matt Bates</fullName>
            </value>
            <value>
                <fullName>Mike Lyden</fullName>
            </value>
            <value>
                <fullName>Patrick O&apos;Mara</fullName>
            </value>
            <value>
                <fullName>Patty McDonald</fullName>
            </value>
            <value>
                <fullName>Peter Rappe</fullName>
            </value>
            <value>
                <fullName>Robert Graydon</fullName>
            </value>
            <value>
                <fullName>Tali Doron</fullName>
            </value>
            <value>
                <fullName>Tim Burrow</fullName>
            </value>
            <value>
                <fullName>Tom Sanchez</fullName>
            </value>
            <value>
                <fullName>Tony Walsh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>