force-app/main/default/objects/OpportunityLineItem/fields/qtc_ACV__c.field-meta.xml
<CustomField>
    <fullName>qtc_ACV__c</fullName>
    <label>ACV (Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>