force-app/main/default/objects/OpportunityLineItem/fields/Qty_Type__c.field-meta.xml
<CustomField>
    <fullName>Qty_Type__c</fullName>
    <label>Qty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATMs</fullName>
                <label>ATMs/Units</label>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>Deposit Transactions</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Total Transactions</fullName>
            </value>
            <value>
                <fullName>Withdrawals Transactions</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>