force-app/main/default/objects/OpportunityLineItem/fields/Scheduled_Qty__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Qty__c</fullName>
    <label>Schld Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>