force-app/main/default/objects/OpportunityLineItem/fields/Sites__c.field-meta.xml
<CustomField>
    <fullName>Sites__c</fullName>
    <label>Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>