force-app/main/default/objects/OpportunityLineItem/fields/Sub_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Package_Name__c</fullName>
    <label>Sub-Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>