force-app/main/default/objects/OpportunityLineItem/fields/Surcharged__c.field-meta.xml
<CustomField>
    <fullName>Surcharged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CATM</description>
    <label>Surcharged?</label>
    <type>Checkbox</type>
</CustomField>