force-app/main/default/objects/OpportunityLineItem/fields/SW_Unattached_Code__c.field-meta.xml
<CustomField>
    <fullName>SW_Unattached_Code__c</fullName>
    <label>SW Unattached Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>