force-app/main/default/objects/OpportunityLineItem/fields/Total_Cost_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>