force-app/main/default/objects/OpportunityLineItem/validationRules/Close_Date_Out_of_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Out_of_Range</fullName>
    <active>false</active>
    <description>The close date is not valid.</description>
    <errorConditionFormula>Opportunity.CloseDate &lt; TODAY()</errorConditionFormula>
    <errorMessage>Book Date cannot be in the past.  Please return to the main opportunity page and update the Book Date.</errorMessage>
</ValidationRule>