force-app/main/default/objects/OpportunityLineItem/validationRules/No_Unit_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Unit_Price</fullName>
    <active>false</active>
    <description>Unit price has not been entered or is negative</description>
    <errorConditionFormula>UnitPrice  &lt;= 0</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>Please enter a Unit Price greater then 0</errorMessage>
</ValidationRule>