force-app/main/default/objects/OpportunityLineItem/validationRules/Prevent_Negative_UnitPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Negative_UnitPrice</fullName>
    <active>false</active>
    <errorConditionFormula>UnitPrice &lt; 0 &amp;&amp; IF(Opportunity.CPQ__c, FALSE, TRUE)</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>Net Unit Price should not be negative.</errorMessage>
</ValidationRule>