force-app/main/default/objects/OpportunityLineItem/validationRules/Quantity_Greater_than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Greater_than_Zero</fullName>
    <active>false</active>
    <description>Quanity of products must be greater than zero</description>
    <errorConditionFormula>Quantity  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>You must enter a Quantiy that is greater than zero.</errorMessage>
</ValidationRule>