force-app/main/default/objects/OpportunityLineItem/validationRules/Unit_price_is_not_an_integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_price_is_not_an_integer</fullName>
    <active>false</active>
    <description>Unit price contains decimals</description>
    <errorConditionFormula>UnitPrice   &lt;&gt;  FLOOR(UnitPrice)</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>Please enter a Unit Price as a whole number</errorMessage>
</ValidationRule>